--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 #kafka
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.acks=0
-spring.kafka.listener.concurrency=3
+spring.kafka.listener.concurrency=1
+spring.kafka.consumer.max-poll-records=1
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.listener.ack-mode=record
+hello.spring.key=main
+
+
 
