--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #kafka
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=myGroup
+spring.kafka.consumer.group-id=myGroup3
 spring.kafka.producer.acks=0
 spring.kafka.listener.concurrency=1
 spring.kafka.consumer.max-poll-records=1
 spring.kafka.consumer.enable-auto-commit=false
-spring.kafka.listener.ack-mode=record
+spring.kafka.listener.ack-mode=manual
 hello.spring.key=main
 
 
