--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.ack-mode=manual
 hello.spring.key=main
 
-
+#spring.autoconfigure.exclude=\
+#  org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration,\
+#  org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
 
