--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <version>2.5.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
